# bgmd

./: .gitignore  CHANGELOG.md  GEMINI.md  MANIFEST.in  README.md  SPEC.md  pyproject.toml  test_table_fixed.md  test_vulgate.md
bgmd/: canon.py  cli.py  config.py  fetcher.py  formatter.py  lectionary.py  models.py  parser.py
man/: bgmd.1
src/bgmd/: canon.py  cli.py  config.py  fetcher.py  formatter.py  lectionary.py  mapping.py  models.py  parser.py  psalms.py  translations.py
src/bgmd/books/: catholic.csv
src/bgmd/docs/: BUG-001.diff  BUG-001.md
