[project]
name = "bgmd"
version = "0.1.0"
description = "Modern Bible Gateway to Markdown tool"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "typer[all]>=0.12",
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "icalendar>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
]

[project.scripts]
bgmd = "bgmd.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
