[project]
name = "bgmd"
version = "0.1.4"
description = "Modern Bible Gateway to Markdown tool"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "typer>=0.12",
    "shellingham>=1.5",
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "icalendar>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
]

[project.scripts]
bgmd = "bgmd.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["bgmd*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
