[project]
name = "bgmd"
version = "0.1.9"
description = "Modern Bible Gateway to Markdown tool optimized for Obsidian"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "James Montgomery", email = "james@onedev.org" },
    { name = "Gemini CLI" }
]
keywords = ["bible", "markdown", "obsidain", "lectionary", "biblegateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Religion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.12",
    "shellingham>=1.5",
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "icalendar>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/montj2/bgmd"
Repository = "https://github.com/montj2/bgmd"
Issues = "https://github.com/montj2/bgmd/issues"

[project.scripts]
bgmd = "bgmd.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["bgmd*"]

[tool.setuptools.package-data]
"bgmd.books" = ["*.csv"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
